tests/NormalTests/paczka1/small_fuzzy/11024353.err
Error in line 2: dx5nlbz1cK3 S802 76,9
Error in line 5: S802 S802 58,1
